Updated UI to match latest design ideas.

--- a/src/OcsLogExplorer.Web/index.html
+++ b/src/OcsLogExplorer.Web/index.html
@@ -47,78 +47,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid" id="OcsLogExplorer">
-
-      <!-- 
-                <h2 class="sub-header">Synchronize requests</h2>
-                <div class="table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>StartTime</th>
-                                <th>EndTime</th>
-                                <th>Duration</th>
-                                <th>Correlation</th>
-                                <th class="status">StatusCode</th>
-                                <th class="status">Result</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>1243ms</td>
-                                <td>b7ae3b10-2753-442f-b924-6072a86b72d2</td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">OK</button></td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">Success</button></td>
-                            </tr>
-                            <tr>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>1243ms</td>
-                                <td>b7ae3b10-2753-442f-b924-6072a86b72d2</td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">OK</button></td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">Success</button></td>
-                            </tr>
-                            <tr>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>1243ms</td>
-                                <td>b7ae3b10-2753-442f-b924-6072a86b72d2</td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-warning">ServerBusy</button></td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-warning">?</button></td>
-                            </tr>
-                            <tr>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>1243ms</td>
-                                <td>b7ae3b10-2753-442f-b924-6072a86b72d2</td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">OK</button></td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">Success</button></td>
-                            </tr>
-                            <tr>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>1243ms</td>
-                                <td>b7ae3b10-2753-442f-b924-6072a86b72d2</td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-danger">ServerError</button></td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-warning">?</button></td>
-                            </tr>
-                            <tr>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>6/14/2016 14:12:12.23</td>
-                                <td>1243ms</td>
-                                <td>b7ae3b10-2753-442f-b924-6072a86b72d2</td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-success">OK</button></td>
-                                <td class="status"><button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#myModal">Failure</button></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <div class="container-fluid" id="OcsLogExplorer"></div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
@@ -787,7 +716,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/babel" src="js/app.jsx"></script>
 </body>
