--- a/src/OcsLogExplorer.Web/index.html
+++ b/src/OcsLogExplorer.Web/index.html
@@ -37,11 +37,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">OcsLogsExplorer v0.1 alpha</a>
+                <a class="navbar-brand" href="/">OcsLogsExplorer v0.1 alpha</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-                <form class="navbar-form navbar-right">
-                    <input type="file" class="form-control" />
+                <form class="navbar-form navbar-right" method="post" action="/api/init" enctype="multipart/form-data">
+                    <input type="file" name="logFile" class="form-control" /><input type="submit" value="load" />
                 </form>
             </div>
         </div>
@@ -717,6 +717,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/babel" src="js/app.jsx"></script>
+    <script type="text/babel" src="js/app.js"></script>
 </body>
 </html>
